--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "it-recruiting-agency-test-task",
   "version": "0.1.0",
   "private": true,
-	"homepage": "https://pnevmat.github.io/it-recruiting-agency-test-task",
+  "homepage": "https://pnevmat.github.io/it-recruiting-agency-test-task",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "react": "^18.0.0",
@@ -17,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-		"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
